# mempalace-code

./: .gitignore  .verify-state  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/prompts/: codex-hardening-review.md  codex-plan-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dotnet-bench.yml  publish.yml
.tasks/TASK-ARCH-EXTRACTION-MODE/: changelog-scope.json  codex-hardening-files.txt  codex-hardening-round-1.diff  codex-hardening-round-1.md  codex-plan-review.md  harden-scope.json  implement-scope.json  polish-scope.json
.tasks/TASK-ARCH-EXTRACTION-WING-SCOPE/: codex-hardening-files.txt  codex-hardening-round-1.diff  codex-hardening-round-1.md  codex-plan-review.md  harden-scope.json  implement-scope.json
.tasks/TASK-BACKUP-AUTOMATED-RETENTION-DEFAULTS/: harden-scope.json  polish-scope.json
.tasks/TASK-BENCH-DOTNET-CI-GATE/: codex-hardening-files.txt  harden-scope.json  implement-scope.json
.tasks/TASK-CI-CACHING-TEST-ENV-BRANCH/: codex-hardening-files.txt  harden-scope.json  implement-scope.json
.tasks/TASK-CLI-BACKUP-PARENT-OUT-IGNORED/: changelog-scope.json  codex-hardening-files.txt  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json
.tasks/TASK-CLI-COMMAND-MODULES/: codex-hardening-files.txt  codex-plan-review.md  contract-reconcile-result.json  implement-scope.json  plan-contract-sync.json
.tasks/TASK-CLI-EXPORT-STDOUT-CLEAN/: changelog-scope.json  codex-hardening-files.txt  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json
.tasks/TASK-CLI-LAYERS-GRAPH-READONLY-NO-EMBEDDER/: codex-hardening-files.txt  codex-plan-review.md  contract-evidence-ledger.jsonl  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json  polish-scope.json
.tasks/TASK-CLI-MODULE-RUNPY-WARNING/: codex-hardening-files.txt  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json
.tasks/TASK-CLI-OPT-IN-VERSION-CHECK/: polish-scope.json
.tasks/TASK-CLI-READ-SOURCE-PATH-DISCOVERY/: changelog-scope.json  codex-hardening-files.txt  codex-plan-review.md  contract-evidence-ledger.jsonl  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json  polish-scope.json
.tasks/TASK-CLI-READONLY-NON-SEARCH-CALLERS/: codex-hardening-files.txt  codex-plan-review.md  contract-evidence-ledger.jsonl  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json  polish-scope.json
.tasks/TASK-CLI-STATUS-READONLY-NO-EMBEDDER/: codex-hardening-files.txt  codex-plan-review.md  contract-evidence-ledger.jsonl  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json  polish-scope.json
.tasks/TASK-CODE-TREESITTER-GO-RUST-DETACH-TEST/: harden-scope.json
.tasks/TASK-CODE-TREESITTER-PYTHON-DETACH-TEST/: codex-hardening-files.txt  harden-scope.json  implement-scope.json
.tasks/TASK-FUT-MULTI-REPO/: changelog-scope.json  codex-hardening-round-1-files.txt  codex-hardening-round-1.diff  codex-hardening-round-1.md  codex-plan-review.md  harden-scope.json  implement-scope.json  polish-scope.json
.tasks/TASK-GRAPH-TYPED-PAYLOADS/: codex-hardening-files.txt  harden-scope.json  implement-scope.json  plan-contract-sync.json
.tasks/TASK-MCP-DELETE-NO-EMBEDDER-AFTER-READ/: codex-hardening-files.txt  codex-plan-review.md  contract-evidence-ledger.jsonl  followup-harvest.json  harden-scope.json  implement-scope.json  plan-contract-sync.json  polish-scope.json
benchmarks/: BENCHMARKS.md  README.md  code_retrieval_bench.py  convomem_bench.py  dotnet_bench.py  embed_ab_bench.py  locomo_bench.py  longmemeval_bench.py  results_embed_ab_2026-04-09.json  results_token_delta_mempalace.json  token_delta_bench.py
docs/: AGENT_INSTALL.md  BACKLOG-archived.yaml  BACKLOG.yaml  BACKUP_RESTORE.md  BENCH_TOKEN_DELTA.md  COMPARISON_GRAPHIFY.md  HOW_SEARCH_WORKS.md  LLM_USAGE_RULES.md  OFFLINE_USAGE.md  UPSTREAM_HARDENING.md  WHY_THIS_FORK.md
examples/: HOOKS_TUTORIAL.md  basic_mining.py  convo_import.py  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: README.md  __init__.py  _chroma_store.py  backup.py  cli.py  config.py  convo_miner.py  entity_detector.py  export.py  knowledge_graph.py  language_catalog.py  layers.py  mcp_server.py  migrate.py  miner.py  onboarding.py  palace_graph.py  room_detector_local.py  searcher.py  storage.py  treesitter.py  version.py  watcher.py
mempalace_code/: README.md  __init__.py  __main__.py  _chroma_store.py  _stdio.py  architecture.py  backup.py  cli.py  config.py  convo_miner.py  dialect.py  disk_budget.py  entity_detector.py  entity_registry.py  export.py  general_extractor.py  knowledge_graph.py  language_catalog.py  layers.py  mcp_server.py  mcp_tool_profiles.py  migrate.py  miner.py  normalize.py  onboarding.py  palace_graph.py  reader.py  retrieval_rerank.py  room_detector_local.py  search_reranker.py  searcher.py  spellcheck.py  storage.py  version.py  version_check.py  watcher.py
scripts/: bootstrap.sh  codex-review.sh  migrate_storage_smoke.py  nuke_wing.py
tests/: conftest.py  test_architecture_extraction.py  test_backup.py  test_backup_cli.py  test_chroma_compat.py  test_chroma_import_errors.py  test_chunking.py  test_cli.py  test_cli_command_modules.py  test_code_retrieval_bench.py  test_config.py  test_convo_miner.py  test_dialect.py  test_disk_budget.py  test_dotnet_bench.py  test_e2e.py  test_embed_ab_bench.py  test_entity_detector.py  test_export.py  test_general_extractor.py  test_kg_extract.py  test_knowledge_graph.py  test_lang_detect.py  test_language_catalog.py  test_layers.py  test_mcp_registry.py  test_mcp_server.py  test_migrate.py  test_migrate_storage_smoke.py  test_miner.py  test_normalize.py  test_offline.py  test_packaging_namespace.py  test_palace_graph.py  test_reader.py  test_retrieval_rerank.py  test_search_reranker.py  test_searcher.py  test_split_mega_files.py  test_stdio.py  (+8 more)
(+315 files in other folders)
