[project]
name = "mempalace-code"
version = "1.4.0"
description = "Developer memory tool — mine codebases and conversations into a LanceDB-backed searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Aleksandr Markov", email = "rergards@gmail.com"},
    {name = "Ben Sigman"},
    {name = "Igor Lins e Silva"},
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "rag", "lancedb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
    "crash-safe", "code-mining", "developer-tools", "code-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "lancedb>=0.17",
    "sentence-transformers>=2.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/rergards/mempalace-code"
Repository = "https://github.com/rergards/mempalace-code"
"Bug Tracker" = "https://github.com/rergards/mempalace-code/issues"
Upstream = "https://github.com/milla-jovovich/mempalace"

[project.scripts]
mempalace = "mempalace:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
spellcheck = ["autocorrect>=2.0"]
chroma = ["chromadb>=0.5.0,<2"]
watch = ["watchfiles>=1.0"]
treesitter = [
    "tree-sitter>=0.22,<0.24; python_version < '3.10'",
    "tree-sitter>=0.22,<0.26; python_version >= '3.10'",
    "tree-sitter-python>=0.23,<0.26; python_version >= '3.10'",
    "tree-sitter-typescript>=0.23,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-rust>=0.23,<0.26",
]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.9"
include = ["mempalace", "tests"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_network: test requires network access (~80 MB download)",
    "slow: test is slow (e.g. mines 500+ files); skippable in fast CI runs",
]
