[project]
name = "mempalace-code"
version = "1.8.1"
description = "Developer memory tool — mine codebases and conversations into a LanceDB-backed searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Aleksandr Markov", email = "rergards@gmail.com"},
    {name = "Ben Sigman"},
    {name = "Igor Lins e Silva"},
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "rag", "lancedb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
    "crash-safe", "code-mining", "developer-tools", "code-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "lancedb>=0.20",
    "sentence-transformers>=2.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/rergards/mempalace-code"
Repository = "https://github.com/rergards/mempalace-code"
"Bug Tracker" = "https://github.com/rergards/mempalace-code/issues"
Upstream = "https://github.com/milla-jovovich/mempalace"

[project.scripts]
mempalace-code = "mempalace_code:main"
mempalace-code-alias = "mempalace_code.cli:main_alias"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "watchfiles>=1.0"]
spellcheck = ["autocorrect>=2.0"]
chroma = ["chromadb>=0.5.0,<2"]
watch = ["watchfiles>=1.0"]
treesitter = [
    "tree-sitter>=0.22,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.26",
    "tree-sitter-go>=0.23,<0.26",
    "tree-sitter-rust>=0.23,<0.26",
]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0", "watchfiles>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace_code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ARG", "DTZ", "PT", "RET", "SIM", "TCH"]
ignore = [
    # Ruff format owns wrapping; avoid duplicate churn from the line-length lint.
    "E501",
    # Transitional pyupgrade backlog: modern annotation/open-mode rewrites are
    # mechanical but broad, so keep them out of the first strictness pass.
    "UP006",
    "UP015",
    "UP024",
    "UP028",
    "UP035",
    "UP036",
    "UP045",
    # Transitional maintainability backlog: current CLI/miner/storage code has
    # several real refactor candidates that should be reviewed separately.
    "B007",
    "B027",
    "B033",
    "B904",
    "B905",
    "DTZ001",
    "DTZ005",
    "DTZ011",
    "RET504",
    "RET505",
    "RET508",
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM116",
    "SIM117",
    # Pytest cleanup backlog: fixtures, callbacks, and patch side effects use
    # framework-required signatures that need local underscore renames.
    "ARG001",
    "ARG002",
    "ARG005",
    "PT001",
    "PT006",
    "PT017",
]

[tool.ruff.lint.per-file-ignores]
# Transitional production-code strictness pass. These ignores keep the existing
# codebase passing while the selected rule families make each deferred rule
# visible in local focused runs such as `ruff check --select SIM`.
"mempalace_code/**/*.py" = [
    "ARG001",
    "ARG002",
    "B007",
    "B027",
    "B033",
    "B904",
    "B905",
    "DTZ005",
    "DTZ011",
    "RET504",
    "RET505",
    "RET508",
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM115",
    "SIM116",
    "UP006",
    "UP015",
    "UP024",
    "UP035",
    "UP045",
]
# Tests intentionally use fixture parameters, callbacks, and mocks with framework
# signatures. Non-ARG pytest and maintainability diagnostics remain staged here
# until they can be reviewed without obscuring behavior-focused tests.
"tests/**/*.py" = [
    "ARG001",
    "ARG002",
    "ARG005",
    "B905",
    "DTZ001",
    "DTZ005",
    "PT001",
    "PT006",
    "PT017",
    "SIM115",
    "SIM117",
    "UP015",
    "UP028",
    "UP036",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
include = ["mempalace_code", "tests"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not needs_network and not slow"]
markers = [
    "needs_network: test requires network access (~80 MB download)",
    "slow: test is slow (e.g. mines 500+ files); skippable in fast CI runs",
]
